Рефакторинг кода - Создание запросов через сессии

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 #Конфиг для Pytest
 [pytest]
 console_output_style = count
-addopts = -v --tb=auto -s -p no:cacheprovider  -rxXs --disable-warnings -vv
+addopts = -v --tb=auto -s -p no:cacheprovider  -rxXs --disable-warnings
 
 
 #-v отображение вида успешности прохождения теста([FAILED]/[PASS])
